--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ em{
     color: rosybrown;
 }
 
+.titulo-principal{
+    padding: 20px;
+}
+
+.titulo-centralizado{
+    text-align: center;
+}
+
 #missao{
     font-size: 20px;
 }
@@ -20,4 +28,25 @@ img{
 
 .itens{
     font-size: italic;
+}
+
+.principal{
+    background-color: #cccccc;
+    padding: 30px;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.beneficios{
+    background-color: white;
+    padding: 20px;
+}
+
+.img-beneficios{
+    width: 50%;
 }
